// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Goodreads Widget matches the loading state snapshot 1`] = `
<DocumentFragment>
  <section
    class="css-1gmhq94"
    id="goodreads"
    tabindex="-1"
  >
    <header
      class="css-f68fi0"
    >
      <div
        class="css-3vwaby"
      >
        <div
          aria-hidden="true"
          class="css-1muvmnm"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-goodreads"
            data-icon="goodreads"
            data-prefix="fab"
            role="img"
            style="width: 14px; height: 14px; color: rgb(255, 255, 255);"
            viewBox="0 0 448 512"
          >
            <path
              d="M299.9 191.2c5.1 37.3-4.7 79-35.9 100.7-22.3 15.5-52.8 14.1-70.8 5.7-37.1-17.3-49.5-58.6-46.8-97.2 4.3-60.9 40.9-87.9 75.3-87.5 46.9-.2 71.8 31.8 78.2 78.3zM448 88l0 336c0 30.9-25.1 56-56 56L56 480c-30.9 0-56-25.1-56-56L0 88C0 57.1 25.1 32 56 32l336 0c30.9 0 56 25.1 56 56zM330 313.2s-.1-34-.1-217.3l-29 0 0 40.3c-.8 .3-1.2-.5-1.6-1.2-9.6-20.7-35.9-46.3-76-46-51.9 .4-87.2 31.2-100.6 77.8-4.3 14.9-5.8 30.1-5.5 45.6 1.7 77.9 45.1 117.8 112.4 115.2 28.9-1.1 54.5-17 69-45.2 .5-1 1.1-1.9 1.7-2.9 .2 .1 .4 .1 .6 .2 .3 3.8 .2 30.7 .1 34.5-.2 14.8-2 29.5-7.2 43.5-7.8 21-22.3 34.7-44.5 39.5-17.8 3.9-35.6 3.8-53.2-1.2-21.5-6.1-36.5-19-41.1-41.8-.3-1.6-1.3-1.3-2.3-1.3l-26.8 0c.8 10.6 3.2 20.3 8.5 29.2 24.2 40.5 82.7 48.5 128.2 37.4 49.9-12.3 67.3-54.9 67.4-106.3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="css-m8374l"
        >
          <h2
            class="css-1tfs9qy"
          >
            Goodreads
          </h2>
          <output
            aria-busy="true"
            aria-live="polite"
            class="css-hgaagu"
          >
            <svg
              aria-label="Loading"
              class="css-sndroo"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <circle
                cx="12"
                cy="12"
                fill="none"
                r="10"
                stroke="currentColor"
                stroke-dasharray="31.4 31.4"
                stroke-linecap="round"
                stroke-width="3"
              />
            </svg>
          </output>
        </div>
      </div>
      <div
        class="css-1df6wzz"
      >
        <div
          class="css-154mwpr"
        >
          <div
            class="css-8kzs4n"
          >
            —
          </div>
          <div
            class="css-b1klod"
          />
        </div>
        <div
          class="css-154mwpr"
        >
          <div
            class="css-8kzs4n"
          >
            —
          </div>
          <div
            class="css-b1klod"
          />
        </div>
      </div>
    </header>
    <div
      aria-hidden="true"
      class="css-1x6v59e"
    >
      <div
        class="show-loading-animation css-ylcmma"
      >
        <div
          class="text-block"
          style="width: 100%;"
        >
          <div
            class="text-row"
            style="max-height: 11.11111111111111%; width: 97%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0px;"
          />
          <div
            class="text-row"
            style="max-height: 11.11111111111111%; width: 100%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
          />
          <div
            class="text-row"
            style="max-height: 11.11111111111111%; width: 94%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
          />
          <div
            class="text-row"
            style="max-height: 11.11111111111111%; width: 90%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
          />
          <div
            class="text-row"
            style="max-height: 11.11111111111111%; width: 98%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
          />
        </div>
      </div>
      <div
        class="css-n4yf41"
      >
        <div
          aria-hidden="true"
          class="css-obv90v"
        />
      </div>
    </div>
    <div
      data-testid="recently-read-books"
    >
      Loading...
    </div>
    <div
      data-testid="user-status"
    >
      Loading...
    </div>
  </section>
</DocumentFragment>
`;

exports[`Goodreads Widget renders error state 1`] = `
<DocumentFragment>
  <section
    class="css-vhkudu"
    id="goodreads"
    tabindex="-1"
  >
    <div
      class="css-33wwjq"
    >
      <div
        class="css-1yb068l"
      >
        <h4>
          Something went wrong
        </h4>
        <p>
          Failed to load this widget.
        </p>
      </div>
      <div
        class="css-oxv113"
      />
    </div>
    <header
      class="css-ubozo4"
    >
      <div
        class="css-3vwaby"
      >
        <div
          aria-hidden="true"
          class="css-1muvmnm"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-goodreads"
            data-icon="goodreads"
            data-prefix="fab"
            role="img"
            style="width: 14px; height: 14px; color: rgb(255, 255, 255);"
            viewBox="0 0 448 512"
          >
            <path
              d="M299.9 191.2c5.1 37.3-4.7 79-35.9 100.7-22.3 15.5-52.8 14.1-70.8 5.7-37.1-17.3-49.5-58.6-46.8-97.2 4.3-60.9 40.9-87.9 75.3-87.5 46.9-.2 71.8 31.8 78.2 78.3zM448 88l0 336c0 30.9-25.1 56-56 56L56 480c-30.9 0-56-25.1-56-56L0 88C0 57.1 25.1 32 56 32l336 0c30.9 0 56 25.1 56 56zM330 313.2s-.1-34-.1-217.3l-29 0 0 40.3c-.8 .3-1.2-.5-1.6-1.2-9.6-20.7-35.9-46.3-76-46-51.9 .4-87.2 31.2-100.6 77.8-4.3 14.9-5.8 30.1-5.5 45.6 1.7 77.9 45.1 117.8 112.4 115.2 28.9-1.1 54.5-17 69-45.2 .5-1 1.1-1.9 1.7-2.9 .2 .1 .4 .1 .6 .2 .3 3.8 .2 30.7 .1 34.5-.2 14.8-2 29.5-7.2 43.5-7.8 21-22.3 34.7-44.5 39.5-17.8 3.9-35.6 3.8-53.2-1.2-21.5-6.1-36.5-19-41.1-41.8-.3-1.6-1.3-1.3-2.3-1.3l-26.8 0c.8 10.6 3.2 20.3 8.5 29.2 24.2 40.5 82.7 48.5 128.2 37.4 49.9-12.3 67.3-54.9 67.4-106.3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="css-m8374l"
        >
          <h2
            class="css-1tfs9qy"
          >
            Goodreads
          </h2>
          <a
            class="css-bgnrb"
            href="https://www.goodreads.com/mockusername"
            title="mockusername on Goodreads"
          >
            Visit Profile 
            <span
              class="read-more-icon"
            >
              →
            </span>
          </a>
        </div>
      </div>
    </header>
    <div
      data-testid="recently-read-books"
    >
      0 books
    </div>
    <div
      data-testid="user-status"
    >
      No status
    </div>
  </section>
</DocumentFragment>
`;

exports[`Goodreads Widget renders with data and AI summary 1`] = `
<DocumentFragment>
  <section
    class="css-1gmhq94"
    id="goodreads"
    tabindex="-1"
  >
    <header
      class="css-f68fi0"
    >
      <div
        class="css-3vwaby"
      >
        <div
          aria-hidden="true"
          class="css-1muvmnm"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-goodreads"
            data-icon="goodreads"
            data-prefix="fab"
            role="img"
            style="width: 14px; height: 14px; color: rgb(255, 255, 255);"
            viewBox="0 0 448 512"
          >
            <path
              d="M299.9 191.2c5.1 37.3-4.7 79-35.9 100.7-22.3 15.5-52.8 14.1-70.8 5.7-37.1-17.3-49.5-58.6-46.8-97.2 4.3-60.9 40.9-87.9 75.3-87.5 46.9-.2 71.8 31.8 78.2 78.3zM448 88l0 336c0 30.9-25.1 56-56 56L56 480c-30.9 0-56-25.1-56-56L0 88C0 57.1 25.1 32 56 32l336 0c30.9 0 56 25.1 56 56zM330 313.2s-.1-34-.1-217.3l-29 0 0 40.3c-.8 .3-1.2-.5-1.6-1.2-9.6-20.7-35.9-46.3-76-46-51.9 .4-87.2 31.2-100.6 77.8-4.3 14.9-5.8 30.1-5.5 45.6 1.7 77.9 45.1 117.8 112.4 115.2 28.9-1.1 54.5-17 69-45.2 .5-1 1.1-1.9 1.7-2.9 .2 .1 .4 .1 .6 .2 .3 3.8 .2 30.7 .1 34.5-.2 14.8-2 29.5-7.2 43.5-7.8 21-22.3 34.7-44.5 39.5-17.8 3.9-35.6 3.8-53.2-1.2-21.5-6.1-36.5-19-41.1-41.8-.3-1.6-1.3-1.3-2.3-1.3l-26.8 0c.8 10.6 3.2 20.3 8.5 29.2 24.2 40.5 82.7 48.5 128.2 37.4 49.9-12.3 67.3-54.9 67.4-106.3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="css-m8374l"
        >
          <h2
            class="css-1tfs9qy"
          >
            Goodreads
          </h2>
          <a
            class="css-bgnrb"
            href="https://www.goodreads.com/mockusername"
            title="Test User on Goodreads"
          >
            Visit Profile 
            <span
              class="read-more-icon"
            >
              →
            </span>
          </a>
        </div>
      </div>
      <div
        class="css-1df6wzz"
      >
        <div
          class="css-1fzqdmc"
        >
          <div
            class="css-8kzs4n"
          >
            150
          </div>
          <div
            class="css-b1klod"
          >
            Friends
          </div>
        </div>
        <div
          class="css-1fzqdmc"
        >
          <div
            class="css-8kzs4n"
          >
            42
          </div>
          <div
            class="css-b1klod"
          >
            Books Read
          </div>
        </div>
      </div>
    </header>
    <div
      data-testid="ai-summary"
    >
      Test AI summary content
    </div>
    <div
      data-testid="recently-read-books"
    >
      1 books
    </div>
    <div
      data-testid="user-status"
    >
      Test User: Currently reading a great book!
    </div>
  </section>
</DocumentFragment>
`;

exports[`Goodreads Widget renders without AI summary when not available 1`] = `
<DocumentFragment>
  <section
    class="css-1gmhq94"
    id="goodreads"
    tabindex="-1"
  >
    <header
      class="css-ubozo4"
    >
      <div
        class="css-3vwaby"
      >
        <div
          aria-hidden="true"
          class="css-1muvmnm"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-goodreads"
            data-icon="goodreads"
            data-prefix="fab"
            role="img"
            style="width: 14px; height: 14px; color: rgb(255, 255, 255);"
            viewBox="0 0 448 512"
          >
            <path
              d="M299.9 191.2c5.1 37.3-4.7 79-35.9 100.7-22.3 15.5-52.8 14.1-70.8 5.7-37.1-17.3-49.5-58.6-46.8-97.2 4.3-60.9 40.9-87.9 75.3-87.5 46.9-.2 71.8 31.8 78.2 78.3zM448 88l0 336c0 30.9-25.1 56-56 56L56 480c-30.9 0-56-25.1-56-56L0 88C0 57.1 25.1 32 56 32l336 0c30.9 0 56 25.1 56 56zM330 313.2s-.1-34-.1-217.3l-29 0 0 40.3c-.8 .3-1.2-.5-1.6-1.2-9.6-20.7-35.9-46.3-76-46-51.9 .4-87.2 31.2-100.6 77.8-4.3 14.9-5.8 30.1-5.5 45.6 1.7 77.9 45.1 117.8 112.4 115.2 28.9-1.1 54.5-17 69-45.2 .5-1 1.1-1.9 1.7-2.9 .2 .1 .4 .1 .6 .2 .3 3.8 .2 30.7 .1 34.5-.2 14.8-2 29.5-7.2 43.5-7.8 21-22.3 34.7-44.5 39.5-17.8 3.9-35.6 3.8-53.2-1.2-21.5-6.1-36.5-19-41.1-41.8-.3-1.6-1.3-1.3-2.3-1.3l-26.8 0c.8 10.6 3.2 20.3 8.5 29.2 24.2 40.5 82.7 48.5 128.2 37.4 49.9-12.3 67.3-54.9 67.4-106.3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="css-m8374l"
        >
          <h2
            class="css-1tfs9qy"
          >
            Goodreads
          </h2>
          <a
            class="css-bgnrb"
            href="https://www.goodreads.com/mockusername"
            title="Test User on Goodreads"
          >
            Visit Profile 
            <span
              class="read-more-icon"
            >
              →
            </span>
          </a>
        </div>
      </div>
    </header>
    <div
      data-testid="recently-read-books"
    >
      0 books
    </div>
    <div
      data-testid="user-status"
    >
      No status
    </div>
  </section>
</DocumentFragment>
`;
